# aldercowork

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.agent/rules/: domain.md  soul.md
.agent/workflows/: dev-restart.md
.githooks/: commit-msg  pre-commit  pre-push
.githooks/lib/: common.sh  pre-commit.sh  pre-push.sh
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.vue  env.d.ts  main.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/marketplace/: open-source-catalog.json
apps/desktop/src-tauri/resources/prompts/: aldercowork.txt
apps/desktop/src-tauri/src/: kernel.rs  main.rs  profile.rs  skill.rs
apps/desktop/src/composables/: index.ts  useChat.ts  useClient.ts  useConfirm.ts  useCredentialStore.ts  useDataPaths.ts  useDialogA11y.ts  useKernel.ts  useKeyboard.ts  useMarkdown.ts  useReference.ts  useSkillAutocomplete.ts  useSkillImport.ts  useTheme.ts  useToast.ts  useUpdater.ts
apps/desktop/src/config/: build.ts
apps/desktop/src/constants/: runbook.ts
apps/desktop/src/design/: index.css  markdown.css  reset.css  tokens.css
apps/desktop/src/i18n/: en.ts  index.ts  zh.ts
apps/desktop/src/router/: index.ts
apps/desktop/src/services/: kernelConfig.ts  profile.ts  skill.ts
apps/desktop/src/stores/: app.ts  installedSkill.ts  marketplaceSkill.ts  profile.ts  runbook.ts  session.ts  (+5 more)
docs/: product-design.md
prototype/: index.html
scripts/: check-version-bump.sh  download-kernel.sh  hooks-smoke.sh  rename-release-assets.sh  sync-version-from-tag.sh
(+90 files in other folders)
