[package]
name = "aldercowork-desktop"
version = "0.1.2"
description = "AlderCowork desktop shell powered by Tauri"
authors = ["AlderCowork Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["stream"] }
tokio = { version = "1", features = ["process", "time", "sync", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rfd = "0.15"
libc = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_yaml = "0.9"
sha2 = "0.10"
semver = "1"
walkdir = "2"
